; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/extr_lookupbypath.c_test_object_lookupbypath__cleanup.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/extr_lookupbypath.c_test_object_lookupbypath__cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_actualobject = common dso_local global i32* null, align 8
@g_expectedobject = common dso_local global i32* null, align 8
@g_root_tree = common dso_local global i32 0, align 4
@g_head_commit = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_object_lookupbypath__cleanup() #0 {
  %1 = load i32*, i32** @g_actualobject, align 8
  %2 = call i32 @git_object_free(i32* %1)
  %3 = load i32*, i32** @g_expectedobject, align 8
  %4 = call i32 @git_object_free(i32* %3)
  %5 = load i32, i32* @g_root_tree, align 4
  %6 = call i32 @git_tree_free(i32 %5)
  %7 = load i32, i32* @g_head_commit, align 4
  %8 = call i32 @git_commit_free(i32 %7)
  store i32* null, i32** @g_expectedobject, align 8
  %9 = load i32*, i32** @g_repo, align 8
  %10 = call i32 @git_repository_free(i32* %9)
  store i32* null, i32** @g_repo, align 8
  ret void
}

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @git_tree_free(i32) #1

declare dso_local i32 @git_commit_free(i32) #1

declare dso_local i32 @git_repository_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
